force-app/main/default/objects/Risk_Capture__c/Risk_Capture__c.object-meta.xml
<CustomObject>
    <label>Risk Details</label>
    <nameField>
        <label>Risk Capture Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>