force-app/main/default/objects/Risk_Capture__c/fields/De_Minimis_description__c.field-meta.xml
<CustomField>
    <fullName>De_Minimis_description__c</fullName>
    <label>De Minimis (description)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>