force-app/main/default/objects/Risk_Capture__c/fields/Drivers_Claims__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Claims__c</fullName>
    <label>Drivers Claims</label>
    <length>255</length>
    <type>Text</type>
</CustomField>