force-app/main/default/objects/Risk_Capture__c/fields/Drivers_Conviction_Points__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Conviction_Points__c</fullName>
    <label>Drivers Conviction Points</label>
    <length>255</length>
    <type>Text</type>
</CustomField>