force-app/main/default/objects/Risk_Capture__c/fields/Drivers_Convictions__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Convictions__c</fullName>
    <label>Drivers Convictions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC10</fullName>
            </value>
            <value>
                <fullName>AC20</fullName>
            </value>
            <value>
                <fullName>AC30</fullName>
            </value>
            <value>
                <fullName>BA10</fullName>
            </value>
            <value>
                <fullName>BA30</fullName>
            </value>
            <value>
                <fullName>BA40</fullName>
            </value>
            <value>
                <fullName>BA60</fullName>
            </value>
            <value>
                <fullName>CD10</fullName>
            </value>
            <value>
                <fullName>CD20</fullName>
            </value>
            <value>
                <fullName>CD30</fullName>
            </value>
            <value>
                <fullName>CD40</fullName>
            </value>
            <value>
                <fullName>CD50</fullName>
            </value>
            <value>
                <fullName>CD60</fullName>
            </value>
            <value>
                <fullName>CD70</fullName>
            </value>
            <value>
                <fullName>CD80</fullName>
            </value>
            <value>
                <fullName>CD90</fullName>
            </value>
            <value>
                <fullName>CU10</fullName>
            </value>
            <value>
                <fullName>CU20</fullName>
            </value>
            <value>
                <fullName>CU30</fullName>
            </value>
            <value>
                <fullName>CU40</fullName>
            </value>
            <value>
                <fullName>CU50</fullName>
            </value>
            <value>
                <fullName>CU80</fullName>
            </value>
            <value>
                <fullName>DD10</fullName>
            </value>
            <value>
                <fullName>DD40</fullName>
            </value>
            <value>
                <fullName>DD60</fullName>
            </value>
            <value>
                <fullName>DD80</fullName>
            </value>
            <value>
                <fullName>DD90</fullName>
            </value>
            <value>
                <fullName>DR10</fullName>
            </value>
            <value>
                <fullName>DR20</fullName>
            </value>
            <value>
                <fullName>DR30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>