force-app/main/default/objects/Risk_Capture__c/fields/Drivers_DOB__c.field-meta.xml
<CustomField>
    <fullName>Drivers_DOB__c</fullName>
    <label>Drivers DOB</label>
    <type>Date</type>
</CustomField>