force-app/main/default/objects/Risk_Capture__c/fields/Drivers_License_Ban_Details__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Ban_Details__c</fullName>
    <label>Drivers License Ban Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>