force-app/main/default/objects/Risk_Capture__c/fields/Drivers_Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Medical_Conditions__c</fullName>
    <label>Drivers Medical Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>