force-app/main/default/objects/Risk_Capture__c/fields/Drivers_Name__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Name__c</fullName>
    <label>Drivers Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>