force-app/main/default/objects/Risk_Capture__c/fields/Policy_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Policy_Schedule__c</fullName>
    <label>Policy Schedule</label>
    <referenceTo>Policy_Schedule__c</referenceTo>
    <relationshipLabel>Risk Details</relationshipLabel>
    <relationshipName>Risk_Captures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>