force-app/main/default/objects/Risk_Capture__c/fields/VG_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>VG_Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>