force-app/main/default/objects/Risk_Capture__c/fields/VG_Buyer__c.field-meta.xml
<CustomField>
    <fullName>VG_Buyer__c</fullName>
    <label>Buyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>