force-app/main/default/objects/Risk_Capture__c/fields/VG_Cash_Loss_Limit__c.field-meta.xml
<CustomField>
    <fullName>VG_Cash_Loss_Limit__c</fullName>
    <label>Cash Loss Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>