force-app/main/default/objects/Risk_Capture__c/fields/VG_Ceding_Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Ceding_Commission_Type__c</fullName>
    <label>Ceding Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Sliding Scale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>