force-app/main/default/objects/Risk_Capture__c/fields/VG_Claims_Notification_Threshold__c.field-meta.xml
<CustomField>
    <fullName>VG_Claims_Notification_Threshold__c</fullName>
    <label>Claims Notification Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>