force-app/main/default/objects/Risk_Capture__c/fields/VG_Class_1_Employees__c.field-meta.xml
<CustomField>
    <fullName>VG_Class_1_Employees__c</fullName>
    <label>Class 1 Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>