force-app/main/default/objects/Risk_Capture__c/fields/VG_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Not for Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>