force-app/main/default/objects/Risk_Capture__c/fields/VG_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>