force-app/main/default/objects/Risk_Capture__c/fields/VG_De_Minimis_Amount__c.field-meta.xml
<CustomField>
    <fullName>VG_De_Minimis_Amount__c</fullName>
    <label>De Minimis (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>