force-app/main/default/objects/Risk_Capture__c/fields/VG_Dispute_Clause__c.field-meta.xml
<CustomField>
    <fullName>VG_Dispute_Clause__c</fullName>
    <label>Dispute Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>