force-app/main/default/objects/Risk_Capture__c/fields/VG_Enterprise_Value__c.field-meta.xml
<CustomField>
    <fullName>VG_Enterprise_Value__c</fullName>
    <label>Enterprise Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>