force-app/main/default/objects/Risk_Capture__c/fields/VG_Expense_Agreement_Amount__c.field-meta.xml
<CustomField>
    <fullName>VG_Expense_Agreement_Amount__c</fullName>
    <label>Expense Agreement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>