force-app/main/default/objects/Risk_Capture__c/fields/VG_Expense_Agreement_t_Amount_Tax__c.field-meta.xml
<CustomField>
    <fullName>VG_Expense_Agreement_t_Amount_Tax__c</fullName>
    <label>Expense Agreement t Amount (Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>