force-app/main/default/objects/Risk_Capture__c/fields/VG_Fees_Year_2__c.field-meta.xml
<CustomField>
    <fullName>VG_Fees_Year_2__c</fullName>
    <label>Fees - Year 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>