force-app/main/default/objects/Risk_Capture__c/fields/VG_First_Premium_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_First_Premium_Payment_Date__c</fullName>
    <label>First Premium Payment Date</label>
    <type>Date</type>
</CustomField>