force-app/main/default/objects/Risk_Capture__c/fields/VG_Governing_Law_of_Sale_Agreement__c.field-meta.xml
<CustomField>
    <fullName>VG_Governing_Law_of_Sale_Agreement__c</fullName>
    <label>Governing Law of Sale Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>