force-app/main/default/objects/Risk_Capture__c/fields/VG_Headcount__c.field-meta.xml
<CustomField>
    <fullName>VG_Headcount__c</fullName>
    <label>Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>