force-app/main/default/objects/Risk_Capture__c/fields/VG_Income_Basis__c.field-meta.xml
<CustomField>
    <fullName>VG_Income_Basis__c</fullName>
    <label>Income Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GWP</fullName>
            </value>
            <value>
                <fullName>GEP</fullName>
            </value>
            <value>
                <fullName>GNPI</fullName>
            </value>
            <value>
                <fullName>NEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>