force-app/main/default/objects/Risk_Capture__c/fields/VG_Industry__c.field-meta.xml
<CustomField>
    <fullName>VG_Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stockbroker/ broker-dealer/ financial planner</fullName>
            </value>
            <value>
                <fullName>Building Society/ Savings Bank</fullName>
            </value>
            <value>
                <fullName>Commercial Bank</fullName>
            </value>
            <value>
                <fullName>Bankers Exchange House</fullName>
            </value>
            <value>
                <fullName>Mutual Funds</fullName>
            </value>
            <value>
                <fullName>Hedge Funds</fullName>
            </value>
            <value>
                <fullName>General Fund/ Asset Managers</fullName>
            </value>
            <value>
                <fullName>Government/ Central Bank</fullName>
            </value>
            <value>
                <fullName>Composite Insurance Companies</fullName>
            </value>
            <value>
                <fullName>General Life Insurance Companies</fullName>
            </value>
            <value>
                <fullName>Banks/ Life Ins</fullName>
            </value>
            <value>
                <fullName>Merchant/ Investment Bank</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Financial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Trustees</fullName>
            </value>
            <value>
                <fullName>Bankers Venture Capitalists</fullName>
            </value>
            <value>
                <fullName>Commercial Crime</fullName>
            </value>
            <value>
                <fullName>Credit Unions</fullName>
            </value>
            <value>
                <fullName>Alternative Lenders</fullName>
            </value>
            <value>
                <fullName>Mortgage banks/ Brokers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>