force-app/main/default/objects/Risk_Capture__c/fields/VG_IsTemp__c.field-meta.xml
<CustomField>
    <fullName>VG_IsTemp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTemp</label>
    <type>Checkbox</type>
</CustomField>