force-app/main/default/objects/Risk_Capture__c/fields/VG_Layer__c.field-meta.xml
<CustomField>
    <fullName>VG_Layer__c</fullName>
    <label>Layer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Layer</fullName>
            </value>
            <value>
                <fullName>2nd Layer</fullName>
            </value>
            <value>
                <fullName>3rd Layer</fullName>
            </value>
            <value>
                <fullName>4th Layer</fullName>
            </value>
            <value>
                <fullName>5th Layer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>