force-app/main/default/objects/Risk_Capture__c/fields/VG_Market_Cap__c.field-meta.xml
<CustomField>
    <fullName>VG_Market_Cap__c</fullName>
    <label>Market Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>