force-app/main/default/objects/Risk_Capture__c/fields/VG_Net_Equity__c.field-meta.xml
<CustomField>
    <fullName>VG_Net_Equity__c</fullName>
    <label>Net Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>