force-app/main/default/objects/Risk_Capture__c/fields/VG_No_of_Reinstatements__c.field-meta.xml
<CustomField>
    <fullName>VG_No_of_Reinstatements__c</fullName>
    <label>No of Reinstatements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>