force-app/main/default/objects/Risk_Capture__c/fields/VG_Plan_Loss_Ratio__c.field-meta.xml
<CustomField>
    <fullName>VG_Plan_Loss_Ratio__c</fullName>
    <label>Plan Loss Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>