force-app/main/default/objects/Risk_Capture__c/fields/VG_Policy_Details__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Details__c</fullName>
    <label>Policy Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>