force-app/main/default/objects/Risk_Capture__c/fields/VG_Profession__c.field-meta.xml
<CustomField>
    <fullName>VG_Profession__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountants</fullName>
            </value>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Design and Construction - High Risk</fullName>
            </value>
            <value>
                <fullName>Design and Construction - Med Risk</fullName>
            </value>
            <value>
                <fullName>Design and Construction - Low Risk</fullName>
            </value>
            <value>
                <fullName>Employment Agents</fullName>
            </value>
            <value>
                <fullName>Engineers</fullName>
            </value>
            <value>
                <fullName>Insurance Brokers</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Lloyd&apos;s Brokers</fullName>
            </value>
            <value>
                <fullName>Management Consultants</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>MGAs</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Solicitors</fullName>
            </value>
            <value>
                <fullName>Surveyors</fullName>
            </value>
            <value>
                <fullName>Design and Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>