force-app/main/default/objects/Risk_Capture__c/fields/VG_Proposal_form_date__c.field-meta.xml
<CustomField>
    <fullName>VG_Proposal_form_date__c</fullName>
    <label>Proposal form date</label>
    <type>Date</type>
</CustomField>