force-app/main/default/objects/Risk_Capture__c/fields/VG_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Premium</fullName>
            </value>
            <value>
                <fullName>Rate on Income</fullName>
            </value>
            <value>
                <fullName>Swing rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>