force-app/main/default/objects/Risk_Capture__c/fields/VG_Reinstatement_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Reinstatement_Premium__c</fullName>
    <label>Reinstatement Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>