force-app/main/default/objects/Risk_Capture__c/fields/VG_Reinstatement_Premiums__c.field-meta.xml
<CustomField>
    <fullName>VG_Reinstatement_Premiums__c</fullName>
    <label>Reinstatement Premium</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>