force-app/main/default/objects/Risk_Capture__c/fields/VG_Retention_Amount__c.field-meta.xml
<CustomField>
    <fullName>VG_Retention_Amount__c</fullName>
    <label>Retention (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>