force-app/main/default/objects/Risk_Capture__c/fields/VG_Retention_Applicable_to_all_risks__c.field-meta.xml
<CustomField>
    <fullName>VG_Retention_Applicable_to_all_risks__c</fullName>
    <label>Retention  (Applicable to all risks)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>