force-app/main/default/objects/Risk_Capture__c/fields/VG_Retention_description__c.field-meta.xml
<CustomField>
    <fullName>VG_Retention_description__c</fullName>
    <label>Retention description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>