force-app/main/default/objects/Risk_Capture__c/fields/VG_Retention_Fixed_or_Tipping__c.field-meta.xml
<CustomField>
    <fullName>VG_Retention_Fixed_or_Tipping__c</fullName>
    <label>Retention (Fixed or Tipping)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Tipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>