force-app/main/default/objects/Risk_Capture__c/fields/VG_Retention_of_EV__c.field-meta.xml
<CustomField>
    <fullName>VG_Retention_of_EV__c</fullName>
    <label>Retention (% of EV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>