force-app/main/default/objects/Risk_Capture__c/fields/VG_Revenue__c.field-meta.xml
<CustomField>
    <fullName>VG_Revenue__c</fullName>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>