force-app/main/default/objects/Risk_Capture__c/fields/VG_Risk_End__c.field-meta.xml
<CustomField>
    <fullName>VG_Risk_End__c</fullName>
    <label>Risk End</label>
    <type>Date</type>
</CustomField>