force-app/main/default/objects/Risk_Capture__c/fields/VG_Risk_start__c.field-meta.xml
<CustomField>
    <fullName>VG_Risk_start__c</fullName>
    <label>Risk start</label>
    <type>Date</type>
</CustomField>