force-app/main/default/objects/Risk_Capture__c/fields/VG_Sector__c.field-meta.xml
<CustomField>
    <fullName>VG_Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture, Forestry and Fishing</fullName>
            </value>
            <value>
                <fullName>Mining and Quarrying</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Electricity, gas, steam and air conditioning supply</fullName>
            </value>
            <value>
                <fullName>Water supply, sewerage, waste management and remediation activities</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Wholesale and retail trade; repair of motor vehicles and motorcycles</fullName>
            </value>
            <value>
                <fullName>Transportation and storage</fullName>
            </value>
            <value>
                <fullName>Accommodation and food service activities</fullName>
            </value>
            <value>
                <fullName>Information and communication</fullName>
            </value>
            <value>
                <fullName>Financial and insurance activities</fullName>
            </value>
            <value>
                <fullName>Real estate activities</fullName>
            </value>
            <value>
                <fullName>Professional, scientific and technical activities</fullName>
            </value>
            <value>
                <fullName>Administrative and support service activities</fullName>
            </value>
            <value>
                <fullName>Public administration and defence; compulsory social security</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Human health and social work activities</fullName>
            </value>
            <value>
                <fullName>Arts, entertainment and recreation</fullName>
            </value>
            <value>
                <fullName>Other service activities</fullName>
            </value>
            <value>
                <fullName>Activities of households as employers; undifferentiated goods- and services-producing activities of households for own use</fullName>
            </value>
            <value>
                <fullName>Activities of extraterritorial organisations and bodies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>