force-app/main/default/objects/Risk_Capture__c/fields/VG_Seller__c.field-meta.xml
<CustomField>
    <fullName>VG_Seller__c</fullName>
    <label>Seller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>