force-app/main/default/objects/Risk_Capture__c/fields/VG_Share__c.field-meta.xml
<CustomField>
    <fullName>VG_Share__c</fullName>
    <label>Share</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>