force-app/main/default/objects/Risk_Capture__c/fields/VG_Target__c.field-meta.xml
<CustomField>
    <fullName>VG_Target__c</fullName>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>