force-app/main/default/objects/Risk_Capture__c/fields/VG_Territorial_Limits__c.field-meta.xml
<CustomField>
    <fullName>VG_Territorial_Limits__c</fullName>
    <label>Territorial Limits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>