force-app/main/default/objects/Risk_Capture__c/fields/VG_Territorial_Scope__c.field-meta.xml
<CustomField>
    <fullName>VG_Territorial_Scope__c</fullName>
    <label>Territorial Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Worldwide</fullName>
            </value>
            <value>
                <fullName>Worldwide Ex North America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Cyprus</fullName>
            </value>
            <value>
                <fullName>Croatia</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Estonia</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Greece</fullName>
            </value>
            <value>
                <fullName>Hungary</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Latvia</fullName>
            </value>
            <value>
                <fullName>Lithuania</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Malta</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Romania</fullName>
            </value>
            <value>
                <fullName>Slovakia</fullName>
            </value>
            <value>
                <fullName>Slovenia</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>