force-app/main/default/objects/Risk_Capture__c/fields/VG_Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>VG_Total_Assets__c</fullName>
    <label>Total Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>