force-app/main/default/objects/Risk_Capture__c/validationRules/RD_Name_Updation.validationRule-meta.xml
<ValidationRule>
    <fullName>RD_Name_Updation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNEW() ) , ISCHANGED( Name ) )</errorConditionFormula>
    <errorMessage>Cannot update Risk Details number</errorMessage>
</ValidationRule>